<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.test.QuizResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/quiz_result"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/linearView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp"
            tools:text="12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/slash"
            android:textSize="42sp" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="#071C93"
            android:textSize="42sp"
            tools:text="12" />

    </LinearLayout>

    <TextView
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/linearView"
        android:layout_marginStart="32sp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32sp"
        android:background="@drawable/back_button_blue"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>